# json-five-rs

./: Cargo.toml  README.md
.github/workflows/: build.yaml  release.yaml
benches/: bench_compare.rs  bench_deserialize.rs
data/: arrays.json  nested_array.json  nested_object.json  number.json  setupdata.sh
examples/json5-doublequote-fixer/: Cargo.toml  README.md
examples/json5-doublequote-fixer/src/: main.rs
examples/json5-trailing-comma-formatter/: Cargo.toml  README.md
examples/json5-trailing-comma-formatter/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: de.rs  lib.rs  parser.rs  parser_rt.rs  ser.rs  tokenize.rs  utils.rs
src/rt/: parser.rs  tokenize.rs
