[package]
name = "json-five"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", optional = true }
unicode-general-category = { version = "1.0" }
[features]
default = ["serde"]
serde = ["dep:serde"]

[dev-dependencies.serde]
version = "*"
features = ["derive"]

[dev-dependencies]
criterion = { version="0.5" }
serde_json = "1.0"
json5 = "0.4.1"

[[bench]]
name = "bench_compare"
harness = false
