[package]
name = "json-five"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "JSON5 parser with round-trip capabilities and compatible with the serde data model"
repository = "https://github.com/spyoungtech/json-five-rs"
readme = "README.md"
keywords = ["serde", "json5", "json", "round-trip", "parser"]
categories = ["parsing", "parser-implementations"]
include = ["src/**/*.rs", "Cargo.toml"]

[dependencies]
serde = { version = "1.0", optional = true }
unicode-general-category = { version = "1.0" }
[features]
default = ["serde"]
serde = ["dep:serde"]

[dev-dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies]
criterion = { version="0.5" }
serde_json = "1.0"
json5 = "0.4.1"
regex = "1"

[[bench]]
name = "bench_compare"
harness = false

[[example]]
crate-type = ["bin"]
path = "examples/json5-doublequote-fixer/src/main.rs"
name = "json5-doublequote-fixer"
test = true

[[example]]
crate-type = ["bin"]
path = "examples/json5-trailing-comma-formatter/src/main.rs"
name = "json5-trailing-comma-formatter"
test = true
